--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -98,7 +98,7 @@
 <body>
 <div class="signup-container">
     <h2>Signup Form</h2>
-    <form th:action="@{/auth/signup}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/opensquare/auth/signup}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <input type="text" id="firstName" name="firstName" required placeholder=" ">
             <label for="firstName">First Name:</label>
@@ -122,6 +122,10 @@
         <div class="form-group">
             <input type="text" id="organization" name="organization" required placeholder=" ">
             <label for="organization">Organization:</label>
+        </div>
+        <div class="form-group">
+            <input type="text" id="profession" name="profession" required placeholder=" ">
+            <label for="profession">Profession:</label>
         </div>
         <div class="form-group">
             <input type="text" id="ageGroup" name="ageGroup" required placeholder=" ">
